fix overflow -> hide

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ html , body, body > canvas{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-
+    overflow: hidden;
 }
 body > canvas{
     position: fixed;
